.stack-work/logs/hmatrix-0.18.0.0.log
Configuring hmatrix-0.18.0.0...
Building hmatrix-0.18.0.0...
Preprocessing library hmatrix-0.18.0.0...
[ 1 of 27] Compiling Internal.Vector  ( src/Internal/Vector.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.2.0/build/Internal/Vector.o )
[ 2 of 27] Compiling Internal.Devel   ( src/Internal/Devel.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.2.0/build/Internal/Devel.o )
[ 3 of 27] Compiling Internal.Vectorized ( src/Internal/Vectorized.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.2.0/build/Internal/Vectorized.o )
[ 4 of 27] Compiling Internal.Matrix  ( src/Internal/Matrix.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.2.0/build/Internal/Matrix.o )
[ 5 of 27] Compiling Internal.IO      ( src/Internal/IO.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.2.0/build/Internal/IO.o )
[ 6 of 27] Compiling Internal.ST      ( src/Internal/ST.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.2.0/build/Internal/ST.o )
[ 7 of 27] Compiling Internal.Element ( src/Internal/Element.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.2.0/build/Internal/Element.o )
[ 8 of 27] Compiling Internal.Conversion ( src/Internal/Conversion.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.2.0/build/Internal/Conversion.o )
[ 9 of 27] Compiling Internal.LAPACK  ( src/Internal/LAPACK.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.2.0/build/Internal/LAPACK.o )
[10 of 27] Compiling Internal.Numeric ( src/Internal/Numeric.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.2.0/build/Internal/Numeric.o )
[11 of 27] Compiling Internal.Sparse  ( src/Internal/Sparse.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.2.0/build/Internal/Sparse.o )
[12 of 27] Compiling Numeric.LinearAlgebra.Devel ( src/Numeric/LinearAlgebra/Devel.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.2.0/build/Numeric/LinearAlgebra/Devel.o )
[13 of 27] Compiling Numeric.Vector   ( src/Numeric/Vector.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.2.0/build/Numeric/Vector.o )
[14 of 27] Compiling Internal.Chain   ( src/Internal/Chain.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.2.0/build/Internal/Chain.o )
[15 of 27] Compiling Numeric.Matrix   ( src/Numeric/Matrix.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.2.0/build/Numeric/Matrix.o )
[16 of 27] Compiling Internal.Algorithms ( src/Internal/Algorithms.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.2.0/build/Internal/Algorithms.o )
[17 of 27] Compiling Internal.Container ( src/Internal/Container.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.2.0/build/Internal/Container.o )
[18 of 27] Compiling Internal.CG      ( src/Internal/CG.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.2.0/build/Internal/CG.o )
[19 of 27] Compiling Internal.Convolution ( src/Internal/Convolution.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.2.0/build/Internal/Convolution.o )
[20 of 27] Compiling Internal.Random  ( src/Internal/Random.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.2.0/build/Internal/Random.o )
[21 of 27] Compiling Internal.Util    ( src/Internal/Util.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.2.0/build/Internal/Util.o )
[22 of 27] Compiling Internal.Modular ( src/Internal/Modular.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.2.0/build/Internal/Modular.o )
[23 of 27] Compiling Numeric.LinearAlgebra.Data ( src/Numeric/LinearAlgebra/Data.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.2.0/build/Numeric/LinearAlgebra/Data.o )
[24 of 27] Compiling Numeric.LinearAlgebra ( src/Numeric/LinearAlgebra.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.2.0/build/Numeric/LinearAlgebra.o )
[25 of 27] Compiling Internal.Static  ( src/Internal/Static.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.2.0/build/Internal/Static.o )
[26 of 27] Compiling Numeric.LinearAlgebra.Static ( src/Numeric/LinearAlgebra/Static.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.2.0/build/Numeric/LinearAlgebra/Static.o )
[27 of 27] Compiling Numeric.LinearAlgebra.HMatrix ( src/Numeric/LinearAlgebra/HMatrix.hs, .stack-work/dist/x86_64-osx/Cabal-1.24.2.0/build/Numeric/LinearAlgebra/HMatrix.o )
clang: warning: -O4 is equivalent to -O3
clang: warning: -O4 is equivalent to -O3
clang: warning: -O4 is equivalent to -O3

src/Internal/C/vector-aux.c:574:14: error:
     warning: absolute value function 'abs' given an argument of type 'const int64_t' (aka 'const long long') but has parameter of type 'int' which may cause truncation of value [-Wabsolute-value]
            OP(3,abs)
                 ^

src/Internal/C/vector-aux.c:574:14: error:
     note: use function 'labs' instead
            OP(3,abs)
                 ^~~
                 labs

src/Internal/C/vector-aux.c:504:53: error:
     note: expanded from macro 'OP'
#define OP(C,F) case C: { for(k=0;k<xn;k++) rp[k] = F(xp[k]); OK }
                                                    ^

src/Internal/C/vector-aux.c:941:9: error:
     warning: randomVector is not thread-safe in OSX and FreeBSD [-W#pragma-messages]
#pragma message "randomVector is not thread-safe in OSX and FreeBSD"
        ^
2 warnings generated.
clang: warning: -O4 is equivalent to -O3

src/Internal/C/vector-aux.c:574:14: error:
     warning: absolute value function 'abs' given an argument of type 'const int64_t' (aka 'const long long') but has parameter of type 'int' which may cause truncation of value [-Wabsolute-value]
            OP(3,abs)
                 ^

src/Internal/C/vector-aux.c:574:14: error:
     note: use function 'labs' instead
            OP(3,abs)
                 ^~~
                 labs

src/Internal/C/vector-aux.c:504:53: error:
     note: expanded from macro 'OP'
#define OP(C,F) case C: { for(k=0;k<xn;k++) rp[k] = F(xp[k]); OK }
                                                    ^

src/Internal/C/vector-aux.c:941:9: error:
     warning: randomVector is not thread-safe in OSX and FreeBSD [-W#pragma-messages]
#pragma message "randomVector is not thread-safe in OSX and FreeBSD"
        ^
2 warnings generated.
ld: warning: directory not found for option '-L/opt/local/lib/'
Installing library in
/Users/aharol/.stack/snapshots/x86_64-osx/lts-8.0/8.0.2/lib/x86_64-osx-ghc-8.0.2/hmatrix-0.18.0.0-Jq6rGX8YpZCYBXqZ1BG1O
Registering hmatrix-0.18.0.0...
